--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
     <title>SketchPad</title>
 </head>
 <body>
-    <h1>Press Set Grid Size to set size of grid as Number x Number</h1>
-    <button id="set-size">Set Grid Size</button>
-    <div class="container" id="container">
+    <h1>SketchPad</h1>
+    <div class="game">
+        <div class="controls">
+            <button id="black">Black Marker</button><br>
+            <button id="rainbow">Rainbow Marker</button><br>
+            <button id="Clear">Erase</button><br>
+            <div class="gridsize">12 x 12</div>
+            <input type="range" id="set-grid" value="12" min="1" max="64" step="1"/>
+        </div>
+        <div class="sketchpad">
+            <div class="container" id="container">
+            </div>
+        </div>
     </div>
-    <button id="Clear">Clear</button>
 </body>
 </html>
